# simulation

./: .gitignore  .jupytext.toml  .pre-commit-config.yaml  LICENSE  ci.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: _quarto.yml
notebooks/: 01_boggle_taskA_oracle_and_baseline.ipynb  01_boggle_taskA_oracle_and_baseline.py  02_boggle_taskB_pointer_path_decoding.ipynb  02_boggle_taskB_pointer_path_decoding.py  03_boggle_taskC_toy_RL_bot.ipynb  03_boggle_taskC_toy_RL_bot.py  mcmc_sim.ipynb  mcmc_sim.py
src/simulation/: __init__.ipynb  __init__.py
