[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Roberts", email = "ian.roberts@cantab.net" }
]
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupytext==1.16.4",
    "matplotlib>=3.10.5",
    "nbclient>=0.10.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "nbmake>=1.5.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.8",
]
# pyproject.toml
[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
